<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.repsyncdemo.workout.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_workoutDetail"
            app:destination="@id/workoutDetailFragment" />
        <action
            android:id="@+id/action_home_to_createWorkout"
            app:destination="@id/createWorkoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/workoutListFragment"
        android:name="com.repsyncdemo.workout.ui.workout.WorkoutListFragment"
        android:label="@string/nav_workouts"
        tools:layout="@layout/fragment_workout_list">
        <action
            android:id="@+id/action_workoutList_to_createWorkout"
            app:destination="@id/createWorkoutFragment" />
        <action
            android:id="@+id/action_workoutList_to_workoutDetail"
            app:destination="@id/workoutDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.repsyncdemo.workout.ui.feed.FeedFragment"
        android:label="@string/nav_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_feed_to_profile"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_feed_to_notifications"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.repsyncdemo.workout.ui.home.AnalyticsFragment"
        android:label="Analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.repsyncdemo.workout.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_trophyShelf"
            app:destination="@id/trophyShelfFragment" />
        <action
            android:id="@+id/action_profile_to_adminDashboard"
            app:destination="@id/adminDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/createWorkoutFragment"
        android:name="com.repsyncdemo.workout.ui.workout.CreateWorkoutFragment"
        android:label="@string/create_workout"
        tools:layout="@layout/fragment_create_workout" >
        <argument
            android:name="workoutId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_createWorkoutFragment_to_showExercisePickerDialog"
            app:destination="@id/exerciseLibraryFragment" />
    </fragment>

    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.repsyncdemo.workout.ui.workout.WorkoutDetailFragment"
        android:label="Workout"
        tools:layout="@layout/fragment_workout_detail">
        <argument
            android:name="workoutId"
            app:argType="string" />
        <action
            android:id="@+id/action_workoutDetail_to_logWorkout"
            app:destination="@id/logWorkoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/logWorkoutFragment"
        android:name="com.repsyncdemo.workout.ui.exercise.LogWorkoutFragment"
        android:label="@string/log_workout"
        tools:layout="@layout/fragment_log_workout">
        <argument
            android:name="workoutId"
            app:argType="string" />
        <argument
            android:name="logId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.repsyncdemo.workout.ui.profile.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/goalsFragment"
        android:name="com.repsyncdemo.workout.ui.goals.GoalsFragment"
        android:label="@string/nav_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.repsyncdemo.workout.ui.home.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/exerciseLibraryFragment"
        android:name="com.repsyncdemo.workout.ui.dialogs.ExerciseLibraryFragment"
        android:label="Exercise Library" >
        <action
            android:id="@+id/action_exerciseLibrary_to_exercisePickerFilterDialog"
            app:destination="@id/exercisePickerFilterDialog" />
        <action
            android:id="@+id/action_exerciseLibrary_to_createCustomExerciseFragment"
            app:destination="@id/createCustomExerciseFragment" />
    </fragment>

    <dialog
        android:id="@+id/exercisePickerFilterDialog"
        android:name="com.repsyncdemo.workout.ui.dialogs.ExercisePickerFilterDialog"
        android:label="ExercisePickerFilterDialog" />

    <fragment
        android:id="@+id/createCustomExerciseFragment"
        android:name="com.repsyncdemo.workout.ui.dialogs.CreateCustomExerciseFragment"
        android:label="Create Custom Exercise"
        tools:layout="@layout/fragment_create_custom_exercise" />

    <fragment
        android:id="@+id/trophyShelfFragment"
        android:name="com.repsyncdemo.workout.ui.profile.TrophyShelfFragment"
        android:label="Trophy Shelf"
        tools:layout="@layout/fragment_trophy_shelf" />

    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="com.repsyncdemo.workout.ui.admin.AdminDashboardFragment"
        android:label="Admin Dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.repsyncdemo.workout.ui.profile.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>
